--- a/main.html
+++ b/main.html
@@ -125,7 +125,7 @@
     </section>
 
     <footer class="background">
-        <p class="text-footer">Copyright &copy; 2021 www.jatin.com - All rights reserved</p>
+        <p class="text-footer">Copyright &copy; 2021 Jatin Jain - All rights reserved</p>
     </footer>
 
 </body>
